# sudoku

./: Cargo.toml  LICENSE  input.txt  test.txt
sudoku-lib/: Cargo.toml
sudoku-lib/src/: lib.rs
sudoku-lib/src/collections/: availset.rs  indexed.rs
sudoku-lib/src/coordinates/: column.rs  coord.rs  mod.rs  row.rs  sector.rs  shared_macros.rs  zone.rs
sudoku-lib/src/coordinates/intersections/: colsec.rs  mod.rs  rowsec.rs
sudoku-lib/src/solve/: deductive.rs  mod.rs
sudoku-server/: Cargo.toml
sudoku-server/src/: main.rs
sudoku-solver/: Cargo.toml
sudoku-solver/src/: lib.rs  trace.rs
sudoku-solver/src/collections/: availset.rs  indexed.rs  mod.rs
sudoku-solver/src/coordinates/: column.rs  coord.rs  mod.rs  row.rs  sector.rs  shared_macros.rs  zone.rs
sudoku-solver/src/coordinates/intersections/: colsec.rs  mod.rs  rowsec.rs
sudoku-solver/src/solve/: deductive.rs  remaining.rs
