[package]
name = "sudoku-server"
version = "0.1.0"
authors = ["Zachary Stewart <zachary@zstewart.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sudoku-solver = { path = "../sudoku-solver" }

rocket = { git = "https://github.com/SergioBenitez/Rocket.git" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git" }
serde = "1"
serde_json = "1"
thiserror = "1"
