[package]
name = "sudoku-solver"
version = "0.1.0"
authors = ["Zachary Stewart <zachary@zstewart.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = "1"

[dev-dependencies]
env_logger = "0.9"
serde_json = "1"
